refactor to remove rx3 dependencies