@@ -38,13 +38,13 @@
         <org.apache.maven.plugins.maven-compiler-plugin.version>3.8.1
         </org.apache.maven.plugins.maven-compiler-plugin.version>
         <org.junit.version>5.8.0</org.junit.version>
-        <org.projectlombok.lombok.version>1.18.20</org.projectlombok.lombok.version>
+        <org.projectlombok.lombok.version>1.18.22</org.projectlombok.lombok.version>
         <org.apache.pdfbox.version>2.0.24</org.apache.pdfbox.version>
         <com.microsoft.azure.cognitiveservices.azure-cognitiveservices-computervision.version>1.0.8-beta
         </com.microsoft.azure.cognitiveservices.azure-cognitiveservices-computervision.version>
         <io.reactivex.rxjava3.version>3.1.1</io.reactivex.rxjava3.version>
-        <commons-cli.version>1.4</commons-cli.version>
-        <org.owasp.dependency-check-maven.version>6.3.1</org.owasp.dependency-check-maven.version>
+        <commons-cli.version>1.5.0</commons-cli.version>
+        <org.owasp.dependency-check-maven.version>6.4.1</org.owasp.dependency-check-maven.version>
         <maven-gpg-plugin.keyname>0x35FF613B8F44CFEB</maven-gpg-plugin.keyname>
     </properties>
     <scm>
@@ -115,7 +115,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>30.1.1-jre</version>
+            <version>31.0.1-jre</version>
         </dependency>
         <!-- fix jackson-databind-2.10.1.jar (pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.10.1, cpe:2.3:a:fasterxml:jackson-databind:2.10.1:*:*:*:*:*:*:*, cpe:2.3:a:fasterxml:jackson-modules-java8:2.10.1:*:*:*:*:*:*:*) : CVE-2020-25649
             included by com.microsoft.azure.cognitiveservices:azure-cognitiveservices-computervision@1.0.8-beta
@@ -124,19 +124,18 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.13.0-rc2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.reactivex.rxjava3</groupId>
-            <artifactId>rxjava</artifactId>
-            <version>${io.reactivex.rxjava3.version}</version>
+            <version>2.13.0</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>${commons-cli.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.6</version>
         </dependency>
     </dependencies>
     <build>
@@ -164,7 +163,9 @@
                             <version>0.2.0</version>
                         </dependency>
                     </annotationProcessorPaths>
-                    <compilerArgs>-Amapstruct.verbose=true</compilerArgs>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -222,6 +223,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <additionalOptions>--enable-preview</additionalOptions>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
@@ -293,7 +297,9 @@
                             <executable>${basedir}/etc/scripts/create-standalone-elf.sh</executable>
                             <environmentVariables>
                                 <mvn_basedir>${basedir}</mvn_basedir>
-                                <input_file>${project.build.directory}/${project.build.finalName}-jar-with-dependencies.jar</input_file>
+                                <input_file>
+                                    ${project.build.directory}/${project.build.finalName}-jar-with-dependencies.jar
+                                </input_file>
                                 <output_file>${project.build.directory}/${project.build.finalName}</output_file>
                             </environmentVariables>
                         </configuration>
